# PETV148_Summer-Internship_TeamNo_10_Sahil-Rai

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  README.md  config.py  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: scan.py
data/: platforms.json
src/: banner.py  cli.py  exporter.py  logger.py  models.py  rate_limiter.py  report_generator.py  scanner.py  sherlock_engine.py  ui.py  validators.py
templates/: report_template.html.j2
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exporter.py  test_report_generator.py  test_scanner.py  test_ui.py  test_validators.py
