[project]
name = "smft"
version = "1.0.0"
description = "Social Media Footprinting Tool"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.3",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.1"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["PLR0913", "PLR0915", "PLR0912", "B008", "PTH123", "PLR2004", "B023", "E501", "W291", "PLC0415", "ARG002", "N801", "RET504"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
